# idia_vr_quest

./: .gitignore  .gitmodules  README.md
Assets/Fonts/: CONSOLA SDF.asset
Assets/Materials/: VolumeShader.mat  VolumeShaderHalf.mat  VolumeShaderR8.mat
Assets/Resources/: OVRBuildConfig.asset
Assets/Scenes/: Default.unity  SampleScene.unity
Assets/Scripts/: Delegates.cs  RotateY.cs  XRManager.cs
Assets/Scripts/Editor/: CreateTextureFromRaw.cs  CreateTextureSphere.cs
Assets/Scripts/VolumeData/: IVolumeDataSource.cs  MhdDataSource.cs  RemoteDataSource.cs  VolumeDataRenderer.cs  VolumeDataset.cs  VolumeDatasetRenderer.cs
Assets/Shaders/Volumes/: BasicVolume.cginc  BasicVolume.shader  VolumeShader.cginc  VolumeShader.shader
Assets/XR/: XRGeneralSettings.asset
Assets/XR/Settings/: Oculus Settings.asset
Client/: .gitignore  CompileGrpcService.sh  CompileGrpcServiceWindows.ps1
Client/Assets/Materials/: BasicVolume.mat  VolumeShaderR8.mat
Client/Assets/Scenes/: Default.unity  DefaultSettings.lighting
Client/Assets/Scripts/: NativeFunctions.cs  Protobuf  RotateY.cs  SwapBetweenChildren.cs  XRManager.cs
Client/Assets/Scripts/Editor/: CreateTextureFromRaw.cs  CreateTextureSphere.cs
Client/Assets/Scripts/Models/: Error.cs  ExtendedFileInfo.cs  FileList.cs
Client/Assets/Scripts/Services/: BackendService.cs
Client/Assets/Scripts/Util/: Config.cs  FormattingFunctions.cs
Client/Assets/Scripts/VolumeData/: IVolumeDataSource.cs  RemoteDataSource.cs  VolumeDataRenderer.cs  VolumeDataSource.cs
Client/Assets/Shaders/Volumes/: VolumeShader.cginc
Client/Plugins/: CMakeLists.txt  NativeFunctions.cc  NativeFunctions.h
Client/Plugins/zfp_decompression/: CMakeLists.txt  zfp_decompression.cc  zfp_decompression.h
Client/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset  QualitySettings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Protobuf/: BackendService.proto  CMakeLists.txt  DataApi.proto
Server/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CompileGrpcServiceWindows.ps1  Protobuf  proto
Server/DataApi/: DataApi.grpc.pb.cc  DataApi.grpc.pb.h  DataApi.pb.cc  DataApi.pb.h
Server/src/: Compression.cc  Compression.h  FileBrowserImpl.cc  FileBrowserImpl.cpp  FileBrowserImpl.h  FileBrowserService.cc  FileBrowserService.h  FitsImage.cc  FitsImage.h  Image.cc  Image.h  Main.cc  Util.cpp  Util.h  main.cc  main.cpp
Server/src/Timer/: Timer.cc  Timer.h
TestClient/: package-lock.json  package.json  tsconfig.json
TestClient/src/: client.ts
Tests/: .gitignore  CompileGrpcServiceWindows.ps1  client.ts  index.ts  package-lock.json  package.json  server.ts  util.ts
Tests/DataApi/: DataApi_grpc_pb.d.ts  DataApi_grpc_pb.js  DataApi_pb.d.ts  DataApi_pb.js
Tests/src/: client.ts  server.ts  util.ts
